# pyatspi2

./: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  INSTALL  MAINTAINERS  Makefile.am  NEWS  README  README.md  acinclude.m4  autogen.sh  configure.ac  meson.build  meson_options.txt  pyatspi2.doap  pyproject.toml
examples/: Makefile.am  caret.py  keypress.py  magFocusTracker.py  runningappcheck.py
pyatspi/: Accessibility.py  Makefile.am  __init__.py  accessible.py  action.py  appevent.py  application.py  atspienum.py  cache.py  collection.py  component.py  constants.py  desktop.py  deviceevent.py  document.py  editabletext.py  enum.py  exceptions.py  factory.py  hyperlink.py  hypertext.py  image.py  interface.py  interfaces.py  loop.py  meson.build  pyatspi-dbus.pth.in  registry.py  relation.py  role.py  selection.py  settings.py  state.py  table.py  tablecell.py  text.py  utils.py  value.py
pyatspi/busutils/: Makefile.am  __init__.py  bus.py  proxy.py
src/: __init__.py  accessible.py  action.py  appevent.py  application.py  base.py  cache.py  collection.py  component.py  desktop.py  deviceevent.py  document.py  editabletext.py  enum.py  factory.py  hyperlink.py  hypertext.py  image.py  interfaces.py  loop.py  mainloop.py  registry.py  selection.py  table.py  text.py  value.py
tests/: meson.build
tests/apps/: Makefile.am  accessible-app.c  action-app.c  atk-object-xml-loader.c  atk-object-xml-loader.h  component-app.c  meson.build  noop-app.c  relation-app.c  test-application.c
tests/data/: Makefile.am  accessible-test-results-stable.xml  accessible-test-results.xml  accessible-test.xml
tests/dummyatk/: Makefile.am  meson.build  my-atk-action.c  my-atk-action.h  my-atk-component.c  my-atk-component.h  my-atk-document.c  my-atk-document.h  my-atk-hyperlink.c  my-atk-hyperlink.h  my-atk-hypertext.c  my-atk-hypertext.h  my-atk-object.c  my-atk-object.h  my-atk-selection.c  my-atk-selection.h  my-atk-streamable-content.c  my-atk-streamable-content.h  my-atk-table.c  my-atk-table.h  my-atk-text.c  my-atk-text.h  my-atk-value.c  my-atk-value.h  my-atk.h  resources_storage.c  resources_storage.h  useful_functions.c  useful_functions.h  user_marshal.c  user_marshal.h
tests/pyatspi/: Makefile.am  accessibletest.py  actiontest.py  collectiontest.py  componenttest.py  desktoptest.py  meson.build  relationtest.py  runtests.sh  setvars.sh  statetest.py  testrunner  testrunner.in
tests/pyatspi/pasytest/: COPYING-PSF  Events.py  Makefile.am  Pasy.py  __init__.py
