[project]
name = "PyAtspi"
description = "Legacy Python bindings for AT-SPI"
readme = 'README.md'
license = "LGPL-2.0-or-later"
license-files = ["COPYING"]
authors = [
    { name="Mike Gorse", email="mgorse@suse.com" }
]
maintainers = [
    { name="Mike Gorse", email="mgorse@suse.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.6, <4.0"
dependencies = [
    "pygobject>=2.90.1"
]
dynamic = ["version"]

[project.urls]
Repository = "https://gitlab.gnome.org/GNOME/pyatspi2.git"
Changelog = "https://gitlab.gnome.org/GNOME/pyatspi2/-/blob/main/NEWS"

[build-system]
build-backend = "mesonpy"
requires = ["meson-python>=0.12.1", "pygobject>=2.90.1"]
