pyatspidir = $(pythondir)/pyatspi

pyatspi_PYTHON = \
		Accessibility.py	\
                appevent.py             \
		constants.py		\
		deviceevent.py		\
                enum.py                 \
		__init__.py		\
	document.py \
	editabletext.py \
		interfaces.py		\
		registry.py		\
		role.py			\
		state.py		\
	text.py \
		utils.py

CLEANFILES = *.pyc
