pyatspidir = $(pythondir)/pyatspi

pyatspi_PYTHON = \
		Accessibility.py	\
                appevent.py             \
		constants.py		\
		deviceevent.py		\
                enum.py                 \
		__init__.py		\
	action.py \
	application.py \
	collection.py \
	component.py \
	document.py \
	editabletext.py \
	hypertext.py \
	image.py \
		interface.py		\
		registry.py		\
		role.py			\
	selection.py \
		state.py		\
table.py \
	text.py \
		utils.py \
	value.py

CLEANFILES = *.pyc

