lib_sources = [
  '__init__.py',
  'Accessibility.py',
  'action.py',
  'appevent.py',
  'application.py',
  'atspienum.py',
  'collection.py',
  'component.py',
  'constants.py',
  'deviceevent.py',
  'document.py',
  'editabletext.py',
  'hypertext.py',
  'image.py',
  'interface.py',
  'registry.py',
  'role.py',
  'selection.py',
  'state.py',
  'tablecell.py',
  'table.py',
  'text.py',
  'utils.py',
  'value.py'
]

python3.install_sources(
  [ lib_sources ],
  subdir: meson.project_name())
